tdf#101536 sw: do load Insert Index dialog's document ReadOnly

Turns out SwOneExampleFrame is used for different things, so load doc
read-only only if it's an existing document.

(regression from 6a8407d82d71083c8bdec6a106ba9092a5196cbe)

(cherry picked from commit b7faef01678573f7b060ad26798aa841689ce3e6)

Change-Id: I0a1ab0725ed9dccca23742c9d83cd9635a188edf
Reviewed-on: https://gerrit.libreoffice.org/29100
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>